package sample;

import java.util.Collection;

public interface Writeable {
    void write(Collection<Task> tasks);
}

