@startuml

title __JAVAFX_TODOLIST's Class Diagram__\n

  package  {
    package sample {
      class ControlsColorHandler {
      }
    }
  }
  

  package  {
    package sample {
      class ControlsDataReader {
      }
    }
  }
  

  package  {
    package sample {
      class ControlsDataWriter {
      }
    }
  }
  

  package  {
    package sample {
      class EditTaskWindowController {
      }
    }
  }
  

  package  {
    package sample {
      class Excel {
      }
    }
  }
  

  package  {
    package sample {
      class Main {
      }
    }
  }
  

  package  {
    package sample {
      class MainWindowController {
      }
    }
  }
  

  package  {
    package sample {
      interface Readable {
      }
    }
  }
  

  package  {
    package sample {
      class Search {
      }
    }
  }
  

  package  {
    package sample {
      class SqlHandler {
      }
    }
  }
  

  package  {
    package sample {
      class Task {
      }
    }
  }
  

  package  {
    package sample {
      interface Writeable {
      }
    }
  }
  

  ControlsDataWriter o-- ControlsColorHandler : controlsColorHandler
  EditTaskWindowController -up-|> Initializable
  EditTaskWindowController o-- ControlsColorHandler : controlsColorHandler
  EditTaskWindowController o-- ControlsDataReader : controlsDataReader
  EditTaskWindowController o-- SqlHandler : sqlHandler
  EditTaskWindowController o-- Task : editedTask
  Excel -up-|> Writeable
  Main -up-|> Application
  MainWindowController -up-|> Initializable
  MainWindowController o-- ControlsColorHandler : controlsColorHandler
  MainWindowController o-- ControlsDataReader : controlsDataReader
  MainWindowController o-- ControlsDataWriter : controlsDataWriter
  MainWindowController o-- SqlHandler : sqlHandler
  SqlHandler -up-|> Writeable
  SqlHandler -up-|> Readable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
